fix: horizontal scrolling

--- a/src/Components/Modal/Modal.scss
+++ b/src/Components/Modal/Modal.scss
@@ -66,9 +66,17 @@
     border-radius: 0 0 .25rem .25rem;
     width: 100%;
     height: 100%;
+    max-height: 85vh;
     overflow-y: auto;
     position: relative;
-
+    scrollbar-width:none;
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: rgba(255, 255, 255, 0.5);
+      border-radius: 10px;
+    }
     .project-folder {
       display: inline-flex;
       flex-direction: row;
